# coarray_field

./: CMakeLists.txt  README.md  clean_src.sh
cmake/: AddFytestCTest.cmake
src/: CMakeLists.txt  error.f90  globals.f90  test.f90
src/field_2d/: field_2d.f90  field_2d_cpu_operators.f90  field_2d_gpu_operators.f90
src/kernels/reductions/: array_max.cl  array_min.cl  array_sum.cl
tests/unit/: CMakeLists.txt  caf_testing.f90
tests/unit/test_coarray/: CMakeLists.txt  simple.f90  test_caf.fypp
tests/unit/test_field/: CMakeLists.txt  data.h5  test_data_layout.f90  test_field.f90
tests/unit/test_parallel/: CMakeLists.txt  test_parallel.f90
